# swagger.json
@@ -2713,46 +2713,6 @@
                 }
             }
         },
-        "/tenants/self/reports/operations": {
-            "get": {
-                "tags": [
-                    "Tenants"
-                ],
-                "operationId": "TenantReports_GetTenantOperationReport",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/TenantUsageReport"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ProblemDetails"
-                                }
-                            }
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ProblemDetails"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/tenants/self": {
             "get": {
                 "tags": [
@@ -2921,7 +2881,7 @@
                 "requestBody": {
                     "content": {
                         "application/json": {
-                            "schema": {}
+                            "schema": { }
                         }
                     }
                 },
@@ -2930,7 +2890,7 @@
                         "description": "Success",
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "schema": { }
                             }
                         }
                     },
@@ -2984,17 +2944,6 @@
                 ],
                 "operationId": "Tokens_Get",
                 "parameters": [
-                    {
-                        "name": "type",
-                        "in": "query",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            },
-                            "nullable": true
-                        }
-                    },
                     {
                         "name": "id",
                         "in": "query",
@@ -3416,108 +3365,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ProblemDetails"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/transactions": {
-            "post": {
-                "tags": [
-                    "Transactions"
-                ],
-                "operationId": "Transactions_Create",
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/CreateTransactionResponse"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ProblemDetails"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/transactions/{id}/commit": {
-            "post": {
-                "tags": [
-                    "Transactions"
-                ],
-                "operationId": "Transactions_Commit",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "maxLength": 36,
-                            "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/ProblemDetails"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/transactions/{id}/rollback": {
-            "post": {
-                "tags": [
-                    "Transactions"
-                ],
-                "operationId": "Transactions_Rollback",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "maxLength": 36,
-                            "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "401": {
-                        "description": "Unauthorized",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -4062,6 +3909,7 @@
             },
             "CreateReactorRequest": {
                 "required": [
+                    "code",
                     "name"
                 ],
                 "type": "object",
@@ -4072,14 +3920,11 @@
                         "pattern": "^.+$",
                         "type": "string"
                     },
-                    "formula": {
-                        "$ref": "#/components/schemas/ReactorFormula"
-                    },
                     "code": {
                         "maxLength": 50000,
+                        "minLength": 1,
                         "pattern": "^[\\S\\s]*$",
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "application": {
                         "$ref": "#/components/schemas/Application"
@@ -4145,7 +3990,7 @@
                         "type": "string",
                         "nullable": true
                     },
-                    "data": {},
+                    "data": { },
                     "encryption": {
                         "$ref": "#/components/schemas/EncryptionMetadata"
                     },
@@ -4189,36 +4034,6 @@
                             "type": "string"
                         },
                         "nullable": true
-                    }
-                },
-                "additionalProperties": false
-            },
-            "CreateTransactionResponse": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "maxLength": 36,
-                        "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
-                        "type": "string",
-                        "format": "uuid"
-                    },
-                    "created_by": {
-                        "maxLength": 36,
-                        "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$",
-                        "type": "string",
-                        "format": "uuid",
-                        "nullable": true
-                    },
-                    "created_at": {
-                        "maxLength": 40,
-                        "type": "string",
-                        "format": "date-time",
-                        "nullable": true
-                    },
-                    "expires_at": {
-                        "maxLength": 40,
-                        "type": "string",
-                        "format": "date-time"
                     }
                 },
                 "additionalProperties": false
@@ -4536,13 +4351,6 @@
             "GetTokens": {
                 "type": "object",
                 "properties": {
-                    "type": {
-                        "type": "array",
-                        "items": {
-                            "type": "string"
-                        },
-                        "nullable": true
-                    },
                     "id": {
                         "type": "array",
                         "items": {
@@ -4847,7 +4655,7 @@
                         "nullable": true
                     }
                 },
-                "additionalProperties": {}
+                "additionalProperties": { }
             },
             "Proxy": {
                 "type": "object",
@@ -5122,7 +4930,7 @@
                     },
                     "icon": {
                         "maxLength": 50000,
-                        "pattern": "(^data:(image\/png|image\/jpg|image\/jpeg|image\/svg\\+xml);\\s*base64,\\s*(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=|[A-Za-z0-9+\/]{4})$)|(^data:(image\/png|image\/jpg|image\/jpeg);\\s*base64,\\s*(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=|[A-Za-z0-9+\/]{4})$)",
+                        "pattern": "(^data:(image\\/png|image\\/jpg|image\\/jpeg|image\\/svg\\+xml);\\s*base64,\\s*(?:[A-Za-z0-9+\\/]{4})*(?:[A-Za-z0-9+\\/]{2}==|[A-Za-z0-9+\\/]{3}=|[A-Za-z0-9+\\/]{4})$)|(^data:(image\\/png|image\\/jpg|image\\/jpeg);\\s*base64,\\s*(?:[A-Za-z0-9+\\/]{4})*(?:[A-Za-z0-9+\\/]{2}==|[A-Za-z0-9+\\/]{3}=|[A-Za-z0-9+\\/]{4})$)",
                         "type": "string",
                         "nullable": true
                     },
@@ -5637,7 +5445,7 @@
                         "nullable": true
                     },
                     "containers": {
-                        "pattern": "^(?!.*\/\/)(?=.*\/$)\/[A-z0-9_\\-\/]*$",
+                        "pattern": "^(?!.*\\/\\/)(?=.*\\/$)\\/[A-z0-9_\\-\\/]*$",
                         "maxItems": 1,
                         "type": "array",
                         "items": {
@@ -5883,6 +5691,7 @@
             },
             "UpdateReactorRequest": {
                 "required": [
+                    "code",
                     "name"
                 ],
                 "type": "object",
@@ -5898,9 +5707,9 @@
                     },
                     "code": {
                         "maxLength": 50000,
+                        "minLength": 1,
                         "pattern": "^[\\S\\s]*$",
-                        "type": "string",
-                        "nullable": true
+                        "type": "string"
                     },
                     "configuration": {
                         "maxLength": 25,
@@ -6063,7 +5872,7 @@
                         "nullable": true
                     }
                 },
-                "additionalProperties": {}
+                "additionalProperties": { }
             }
         },
         "securitySchemes": {
@@ -6077,7 +5886,7 @@
     },
     "security": [
         {
-            "ApiKey": []
+            "ApiKey": [ ]
         }
     ]
 }
